<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo5"
    tools:context=".ActualizaActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/Titulo3"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtnombreE"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="96dp"
        android:ems="10"
        android:hint="@string/TxtNombre"
        android:inputType="textPersonName"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/txtedadE"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/TxtEdad"
        android:inputType="textPersonName"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/txtnombreE"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtnombreE"
        app:layout_constraintTop_toBottomOf="@+id/txtnombreE" />

    <EditText
        android:id="@+id/txtcorreoE"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/TxtCorreo"
        android:inputType="textPersonName"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/txtedadE"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtedadE"
        app:layout_constraintTop_toBottomOf="@+id/txtedadE" />

    <Button
        android:id="@+id/btnEelimina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="124dp"
        android:onClick="acciones"
        android:text="@string/BtnConfirmar"
        app:layout_constraintEnd_toStartOf="@+id/btnECancelar"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtcorreoE" />

    <Button
        android:id="@+id/btnECancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="48dp"
        android:onClick="acciones"
        android:text="@string/BtnCancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtcorreoE" />

</androidx.constraintlayout.widget.ConstraintLayout>