<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/ListarBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:onClick="Acciones"
        android:text="@string/BtnListar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Principaltxt" />

    <Button
        android:id="@+id/InsertarBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:onClick="Acciones"
        android:text="@string/BtnInsertar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ListarBtn" />

    <Button
        android:id="@+id/SalirBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:onClick="Acciones"
        android:text="@string/BtnSalir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EliminarBtn" />

    <Button
        android:id="@+id/EliminarBtn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:onClick="Acciones"
        android:text="@string/BtnEliminar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ActualizarBtn" />

    <Button
        android:id="@+id/ActualizarBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:onClick="Acciones"
        android:text="@string/BtnEditar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InsertarBtn" />

    <TextView
        android:id="@+id/Principaltxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/Titulo"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>