<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    tools:context=".RegistrarActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/Titulo2"
        android:textColor="@color/purple_700"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/TxtNombre"
        android:inputType="textPersonName"
        android:textColor="@color/teal_700"
        android:textColorHint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/txtEdad"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:hint="@string/TxtEdad"
        android:inputType="textPersonName"
        android:textColor="@color/teal_700"
        android:textColorHint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="@+id/txtNombre"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtNombre"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <Button
        android:id="@+id/btnRGuardar"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="100dp"
        android:text="@string/BtnConfirmar"
        app:layout_constraintEnd_toStartOf="@+id/btnRCancelar"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCorreo" />

    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="108dp"
        android:ems="10"
        android:hint="@string/TxtCorreo"
        android:inputType="textPersonName"
        android:textColor="@color/teal_700"
        android:textColorHint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="@+id/txtEdad"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtEdad"
        app:layout_constraintTop_toBottomOf="@+id/txtEdad" />

    <Button
        android:id="@+id/btnRCancelar"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="40dp"
        android:text="@string/BtnCancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCorreo" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="btnRGuardar" />

</androidx.constraintlayout.widget.ConstraintLayout>